
Added dynamics demo and captured videos for article (16/3/2013):
----------------------------------------------------------------

    Add dynamics demo with:

        1. linear strobe once per-second
        2. linear smooth movement
        3. gravity
        4. angular motion
        5. combination linear and angular motion with gravity

    Add some way to get the strobe remember rigid body snapshots
    and render those. Snapshots should be taken every n seconds,
    where the accumulator is per-mode.

    Snapshots and accumulator should be cleared on mode change

    Tune the snapshots so they record good video / diagrams

    Demo record inputs and playback with video capture

    Capture all videos required for "How The Go Stone Moves"
    and upload to youtube.com

    Urgh. the video quality! =p


Fixed cracks in tesselation (7/3/2012):
---------------------------------------

    Epsilon was set too low when merging vertices, leading to 
    the normals of circle edge not matching with the normals
    of the biconvex, presumably leaving T-joins in the mesh
    between the sphere surface and the bevel torus.

    Increasing the epsilon value from 0.001 to 0.01 cms fixed
    the issue. Easy!

    This value should still be small enough to avoid any overly 
    aggressive vertex welds.


Fixed the damping decay factor so it is framerate independent (7/3/2012):
-------------------------------------------------------------------------

    With a simple adjustment using exponent it is verified to have the
    same amount of damping in super slow-motion as it does when the
    game is running full speed.

    This should also work for adjustments to the number of substep
    iterations in the physics engine as well (this adjusts the dt)


Applied black wood texture to go board (6/3/2012):
--------------------------------------------------

    The black texture looks particularly good with the 
    murasaki go stones!
